--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BlueGrape</string>
+    <string name="my_wallpaper">我的壁纸</string>
+    <string name="current_wallpaper">当前使用的壁纸</string>
+    <string name="about_this_software">关于本软件</string>
 </resources>
