--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="my_wallpaper">我的壁纸</string>
     <string name="current_wallpaper">当前使用的壁纸</string>
     <string name="about_this_software">关于本软件</string>
+    <string name="new_wallpaper">新建壁纸</string>
 </resources>
