--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,10 @@
     <string name="save_wallpaper">保存壁纸</string>
     <string name="apply_wallpaper">应用壁纸</string>
     <string name="delete_wallpaper">删除壁纸</string>
+    <string name="choose_image">选择图片</string>
+    <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
     <string name="wallpaper_name">壁纸名</string>
+    <string name="alpha">透明度</string>
     <string name="fill_method">壁纸填充方法</string>
     <string name="position">壁纸位置</string>
 </resources>
