--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="alpha">透明度</string>
     <string name="fill_method">壁纸填充方法</string>
     <string name="position">壁纸位置</string>
+    <string name="save_successfully">保存成功</string>
 </resources>
