--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="my_wallpaper">我的壁纸</string>
     <string name="current_wallpaper">当前使用的壁纸</string>
     <string name="about_this_software">关于本软件</string>
+    <string name="stop_running">停止运行</string>
     <string name="new_wallpaper">新建壁纸</string>
     <string name="creating_new_wallpaper">正在新建</string>
     <string name="edit_wallpaper">编辑壁纸</string>
