--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="fill_method">壁纸填充方法</string>
     <string name="position">壁纸位置</string>
     <string name="save_successfully">保存成功</string>
+    <string name="confirm_apply">确认应用</string>
+    <string name="apply_successful">应用成功</string>
 </resources>
