--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="delete_wallpaper">删除壁纸</string>
     <string name="confirm_delete">确认删除壁纸吗？</string>
     <string name="choose_image">选择图片</string>
+    <string name="copying_image">正在复制图片</string>
     <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
     <string name="wallpaper_name">壁纸名</string>
     <string name="alpha">不透明度</string>
