--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="accessibility_permission_requests">程序需要“无障碍”权限以获取当前正在使用的应用后决定是否显示壁纸以及显示哪个壁纸，请在列表中找到“BlueGrape”后手动开启权限。</string>
     <string name="overlay_permission_requests">程序需要“在应用上层显示”权限以显示壁纸。请授权。</string>
     <string name="check_update">检查更新</string>
+    <string name="cheking_update">正在检查更新</string>
     <string name="feedback">意见反馈</string>
     <string name="reward_and_contribution">赞赏与贡献</string>
 </resources>
