--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,8 @@
     <string name="apply_successful">应用成功</string>
     <string name="confirm_cancel_apply">确认取消应用吗？</string>
     <string name="current_wallpaper_list_tip">短按以查看详情，长按以取消应用。</string>
-    <string name="accessibility_permission_requests">程序需要“无障碍”权限以获取当前正在使用的应用后决定是否显示壁纸以及显示哪个壁纸，请在列表中找到“BlueGrape”后手动开启权限。</string>
+    <string name="accessibility_permission_requests">程序需要无障碍权限以获取当前正在使用的应用后决定是否显示壁纸以及显示哪个壁纸，请在列表中找到“BlueGrape”后手动开启权限。</string>
+    <string name="accessibility_permission_requests_on_close">Android系统关闭了程序的无障碍权限，这有可能不是您的本意。打开无障碍权限设置吗？\n请在列表中找到“BlueGrape”后手动开启权限。\n如果您觉得这个对话框弹出太频繁，可以停止BlueGrape运行。</string>
     <string name="overlay_permission_requests">程序需要“在应用上层显示”权限以显示壁纸。请授权。</string>
     <string name="check_update">检查更新</string>
     <string name="checking_update">正在检查更新</string>
