--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="pause_running">暂停运行</string>
     <string name="continue_running">继续运行</string>
     <string name="stop_running">停止运行</string>
+    <string name="main_page_text">BlueGrape使用“无障碍”权限检测当前运行的应用程序以决定播放何种壁纸，但这是一个较为高级的权限，Android系统可能会时不时关闭它。当权限关闭时，BlueGrape会弹出弹窗。不便之处，敬请谅解。</string>
     <string name="new_wallpaper">新建壁纸</string>
     <string name="creating_new_wallpaper">正在新建</string>
     <string name="edit_wallpaper">编辑壁纸</string>
