--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="stop_running">停止运行</string>
     <string name="main_page_text">BlueGrape使用“无障碍”权限检测当前运行的应用程序以决定播放何种壁纸，但这是一个较为高级的权限，Android系统可能会时不时关闭它。当权限关闭时，BlueGrape会弹出弹窗。不便之处，敬请谅解。</string>
     <string name="new_wallpaper">新建壁纸</string>
+    <string name="new_video_wallpaper">新建视频壁纸</string>
     <string name="creating_new_wallpaper">正在新建</string>
     <string name="edit_wallpaper">编辑壁纸</string>
     <string name="save_wallpaper">保存壁纸</string>
@@ -15,8 +16,10 @@
     <string name="delete_wallpaper">删除壁纸</string>
     <string name="confirm_delete">确认删除壁纸吗？</string>
     <string name="choose_image">选择图片</string>
+    <string name="choose_video">选择视频</string>
     <string name="copying_image">正在复制图片</string>
     <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
+    <string name="warning_of_choose_video">注意：对于视频，因其体积过大，壁纸只会存储其路径。这意味着，若您移动、重命名（无论是重命名视频本身还是父文件夹），都会导致壁纸失效。</string>
     <string name="wallpaper_name">壁纸名</string>
     <string name="alpha">不透明度</string>
     <string name="fill_method">壁纸填充方法</string>
