--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,14 @@
     <string name="new_video_wallpaper">新建视频壁纸</string>
     <string name="creating_new_wallpaper">正在新建</string>
     <string name="edit_wallpaper">编辑壁纸</string>
+    <string name="edit_video_wallpaper">编辑视频壁纸</string>
     <string name="save_wallpaper">保存壁纸</string>
     <string name="apply_wallpaper">应用壁纸</string>
     <string name="delete_wallpaper">删除壁纸</string>
     <string name="confirm_delete">确认删除壁纸吗？</string>
     <string name="choose_image">选择图片</string>
     <string name="choose_video">选择视频</string>
+    <string name="choose_video_failed">选择视频时出现错误</string>
     <string name="copying_image">正在复制图片</string>
     <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
     <string name="warning_of_choose_video">注意：对于视频，因其体积过大，壁纸只会存储其路径。这意味着，若您移动、重命名（无论是重命名视频本身还是父文件夹），都会导致壁纸失效。</string>
