--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="position">壁纸位置</string>
     <string name="save_successfully">保存成功</string>
     <string name="confirm_apply">确认应用</string>
+    <string name="show_system_app">显示系统应用</string>
     <string name="apply_successful">应用成功</string>
     <string name="confirm_cancel_apply">确认取消应用吗？</string>
     <string name="current_wallpaper_list_tip">短按以查看详情，长按以取消应用。</string>
