--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,9 +51,11 @@
     <string name="input_url">输入壁纸URL</string>
     <string name="OK">好的</string>
     <string name="CANCEL">取消</string>
+    <string name="CONFIRM">确定</string>
     <string name="confirm_download_under_4g">注意，您正处于移动数据网络下，继续下载会消耗流量。真的要继续吗？（土豪请自便）</string>
     <string name="wallpaper_download_task">壁纸下载程序</string>
     <string name="downloading_wallpaper">壁纸正在下载中……</string>
+    <string name="download_canceled">壁纸下载已取消。</string>
     <string name="download_failed">下载壁纸时出现了错误。</string>
     <string name="unzip_failed">解压壁纸时遇到了错误，也许壁纸还能用。</string>
 </resources>
