修改对话框逻辑。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,19 +21,19 @@
     <string name="confirm_delete">确认删除壁纸吗？</string>
     <string name="choose_image">选择图片</string>
     <string name="choose_video">选择视频</string>
-    <string name="choose_video_failed">选择视频时出现错误</string>
-    <string name="copying_image">正在复制图片</string>
+    <string name="choose_video_failed">选择视频时出现错误。</string>
+    <string name="copying_image">正在复制图片……</string>
     <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
     <string name="warning_of_choose_video">注意：对于视频，因其体积过大，壁纸只会存储其路径。这意味着，若您移动、重命名（无论是重命名视频本身还是父文件夹），都会导致壁纸失效。</string>
     <string name="wallpaper_name">壁纸名</string>
     <string name="alpha">不透明度</string>
     <string name="fill_method">壁纸填充方法</string>
     <string name="position">壁纸位置</string>
-    <string name="save_successfully">保存成功</string>
-    <string name="save_failed">在保存时出现了错误</string>
+    <string name="save_successfully">保存成功。</string>
+    <string name="save_failed">在保存时出现了错误。</string>
     <string name="confirm_apply">确认应用</string>
     <string name="show_system_app">显示系统应用</string>
-    <string name="apply_successful">应用成功</string>
+    <string name="apply_successful">应用成功。</string>
     <string name="confirm_cancel_apply">确认取消应用吗？</string>
     <string name="current_wallpaper_list_tip">短按以查看详情，长按以取消应用。</string>
     <string name="accessibility_description">这是BlueGrape运行的必要权限，用于检测当前位于哪个窗口，以决定播放哪个壁纸。</string>
