完善设置的保存与调取功能。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="download_failed">下载壁纸时出现了错误。</string>
     <string name="unzip_failed">解压壁纸时遇到了错误，也许壁纸还能用。</string>
     <string name="settings">设置</string>
+    <string name="settings_save_successfully">保存设置成功</string>
+    <string name="settings_save_failed">保存设置失败</string>
 </resources>
