--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="feedback">意见反馈</string>
     <string name="using_document">使用文档</string>
     <string name="open_web">打开官网</string>
+    <string name="crash_deliberate">崩溃测试</string>
+    <string name="crash_deleberate_description">崩溃测试用于故意触发崩溃以上传日志至Bugly，仅在软件出现问题时使用。</string>
     <string name="reward_and_contribution">赞赏与贡献</string>
     <string name="info_text_load_failed">壁纸加载失败</string>
     <string name="gif_unsupported">不支持GIF。但这个网站可能对您有所帮助：</string>
