--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="choose_image">选择图片</string>
     <string name="choose_video">选择视频</string>
     <string name="choose_video_failed">选择视频时出现错误。</string>
+    <string name="choose_image_failed">选择图片时出现错误</string>
     <string name="copying_image">正在复制图片……</string>
     <string name="warning_of_choose_image">注意：对于图片，选择即保存。</string>
     <string name="warning_of_choose_video">注意：对于视频，因其体积过大，壁纸只会存储其路径。这意味着，若您移动、重命名（无论是重命名视频本身还是父文件夹），都会导致壁纸失效。</string>
